[package]
authors = ["Tookey <admin@tookey.io>"]
edition = "2021"
name = "tookey-libtss"
version = "0.1.0"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["bigint"]
bigint = ["curv-kzen/num-bigint"]
gmp = ["curv-kzen/rust-gmp-kzen"]

[build-dependencies]
napi-build = "2"

[dependencies]
# NodeJS
anyhow = "1.0.65"
napi = { version = "2.10", features = ["async", "serde-json"] }
napi-derive = "2"

# ECDSA
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
round-based = { version = "0.1.4", features = [] }
thiserror = "1.0.34"
derivative = "2"
sha2 = "0.9"

# Join
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "stream"] }
futures = "0.3"
serde_json = "1.0"
async-sse = "5"

# Keygen/Sign
tokio = "1"
derive_more = "0.99.17"
ethereum-types = { version = "0.14.0" }

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false
