[package]
authors = ["Tookey <admin@tookey.io>"]
edition = "2021"
name = "tookey-libtss"
version = "1.2.0"
license = "GPL-3.0"
description = "Library with Threshold Signatures Scheme"
homepage = "https://github.com/tookey-io/libtss"
repository = "https://github.com/tookey-io/libtss"


[lib]
crate-type = ["lib"]

[features]
default = ["bigint", "napi-derive/noop"]
bigint = ["curv-kzen/num-bigint"]
gmp = ["curv-kzen/rust-gmp-kzen"]
napi = ["dep:napi", "napi-derive/default"]

[dev-dependencies]
round-based = { version = "0.1.7", features = ["dev"] }

[dependencies]
anyhow = "1.0"

# ECDSA
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
round-based = { version = "0.1.7", features = [] }
thiserror = "1.0"
sha2 = "0.9"
hex = "0.4"

# Join
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
futures = "0.3"
serde_json = "1.0"
async-sse = "5"

# Keygen/Sign
tokio = "1"

# NodeJS
napi = { version = "2.10", features = ["async", "serde-json"], optional = true }
napi-derive = { version = "2" }

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false
